--- a/templates/index.html
+++ b/templates/index.html
@@ -15,32 +15,32 @@
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
+		<div id="wrapper" class="fade-in">
 
-				<!-- Intro -->
-					<div id="intro">
-						<h1>Hello I'm<br />
-						Karim</h1>
-						<p>A new grad with a degree in Finance.<br>
-							A passion for technology.<br>
-							Self-taught programmer.</p>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div>
+		<!-- Intro -->
+			<div id="intro">
+				<h1>Hello I'm<br />
+				Karim</h1>
+				<p>A new grad with a degree in Finance.<br>
+					A passion for technology.<br>
+					Self-taught programmer.</p>
+				<ul class="actions">
+					<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+				</ul>
+			</div>
 
-				<!-- Header -->
-					<header id="header">
-						<a href="https://www.linkedin.com/in/karim-khatib-6b0336193/" class="logo" target="_blank">LinkedIn</a>
-					</header>
+		<!-- Header -->
+			<header id="header">
+				<a href="https://www.linkedin.com/in/karim-khatib-6b0336193/" class="logo" target="_blank">LinkedIn</a>
+			</header>
 
-				<!-- Nav -->
+		<!-- Nav -->
 <!--					<nav id="nav">-->
 <!--						<ul class="links">-->
 <!--							<li class="active"><a href="index.html">This is Massively</a></li>-->
 <!--						</ul>-->
 <!--
-		<ul class="icons">-->
+<ul class="icons">-->
 <!--							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
 <!--							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
 <!--							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
@@ -48,102 +48,102 @@
 <!--						</ul>-->
 <!--					</nav>-->
 
-				<!-- Main -->
-					<div id="main">
+		<!-- Main -->
+			<div id="main">
 
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<span class="date">{{ current_date }}</span>
-									<h2>this is<br>
-									my portfolio</h2>
-									<p>Ever since I could remember I always had an itch for technology, unfortunately I never took it upon myself to chase that itch. That's until COVID-19 happened, I needed a new hobby, so I reverted to an old friend.</p>
-								</header>
-								<a href="https://www.sait.ca/" class="image main" target="_blank"><img src="static/images/sait.jpeg" alt="SAIT" /></a>
+			<!-- Featured Post -->
+				<article class="post featured">
+					<header class="major">
+						<span class="date">{{ current_date }}</span>
+						<h2>this is<br>
+						my portfolio</h2>
+						<p>Ever since I could remember I always had an itch for technology, unfortunately I never took it upon myself to chase that itch. That's until COVID-19 happened, I needed a new hobby, so I reverted to an old friend.</p>
+					</header>
+					<a href="https://www.sait.ca/" class="image main" target="_blank"><img src="static/images/sait.jpeg" alt="SAIT" /></a>
 <!--								<ul class="actions special">-->
 <!--									<li><a href="#" class="button large">Full Story</a></li>-->
 <!--								</ul>-->
-							</article>
+				</article>
 
-						<!-- Posts -->
-							<section class="posts">
+				<!-- Posts -->
+				<section class="posts">
 
-								<article>
-									<header>
-										<h2><a href="https://github.com/karimx17/Determinant_of_Earnings" target="_blank">Beginner<br />
-										Machine Learning</a></h2>
-									</header>
-									<a href="https://github.com/karimx17/Determinant_of_Earnings" class="image fit" target="_blank"><img src="static/images/ml.jpeg" alt="" /></a>
-									<p>An introduction to prediction using Linear and Multivariable Regression models to predict earnings using amount of school years and work experience of individuals in the US based in 2011.</p>
+					<article>
+						<header>
+							<h2><a href="https://github.com/karimx17/Determinant_of_Earnings" target="_blank">Data Science<br />
+							Machine Learning</a></h2>
+						</header>
+						<a href="https://github.com/karimx17/Determinant_of_Earnings" class="image fit" target="_blank"><img src="static/images/ml.jpeg" alt="" width="300" height="300"/></a>
+						<p>An introduction to prediction using Linear and Multivariable Regression models to predict earnings using amount of school years and work experience of individuals in the US based in 2011.</p>
 <!--									<ul class="actions special">-->
 <!--										<li><a href="https://github.com/karimx17/Morse-Code/blob/master/main.py" class="button" target="_blank">Full Story</a></li>-->
 <!--									</ul>-->
-								</article>
-								<article>
-									<header>
-										<h2><a href="https://github.com/karimx17/Stocks" target="_blank">Intermediate<br />
-										Stock Market</a></h2>
-									</header>
-									<a href="https://github.com/karimx17/Stocks" class="image fit" target="_blank"><img src="static/images/stocks.jpeg" alt="" /></a>
-										<p>Demonstrating my understanding of APIs using the "requests" module. Manipulating the returned data to find the percent change in the chosen stocks price. Finally, automating and scrapping CNBC's website to grab relevant news according to that stock.</p>
+					</article>
+					<article>
+						<header>
+							<h2><a href="https://github.com/karimx17/Stocks" target="_blank">API's<br />
+							Stock Market</a></h2>
+						</header>
+						<a href="https://github.com/karimx17/Stocks" class="image fit" target="_blank"><img src="static/images/stocks.jpeg" alt="" width="300" height="300"/></a>
+							<p>Demonstrating my understanding of APIs using the "requests" module. Manipulating the returned data to find the percent change in the chosen stocks price. Finally, automating and scrapping CNBC's website to grab relevant news according to that stock.</p>
 <!--									<ul class="actions special">-->
 <!--										<li><a href="" class="button" target="_blank">Full Story</a></li>-->
 <!--									</ul>-->
-								</article>
+					</article>
 
-								<article>
-									<header>
-										<h2><a href="https://github.com/karimx17/Police_Killings/blob/master/main.py" target="_blank">Advanced<br />
-										Data Science</a></h2>
-									</header>
-									<a href="https://github.com/karimx17/Police_Killings/blob/master/main.py" class="image fit" target="_blank"><img src="static/images/gov.jpeg" alt="" /></a>
-									<p>I use my skills in Python to analyze the data to give you a perspective of the inverse relationship between High School Graduations and Poverty Levels. Followed by Police Killings and if race is a factor. All numbers are form The United States of America.</p>
+					<article>
+						<header>
+							<h2><a href="https://github.com/karimx17/Police_Killings/blob/master/main.py" target="_blank">Data Science<br />
+							U.S. Stats</a></h2>
+						</header>
+						<a href="https://github.com/karimx17/Police_Killings/blob/master/main.py" class="image fit" target="_blank"><img src="static/images/gov.jpeg" alt="" width="300" height="300"/></a>
+						<p>I use my skills in Python to analyze the data to give you a perspective of the inverse relationship between High School Graduations and Poverty Levels. Followed by Police Killings and if race is a factor. All numbers are form The United States of America.</p>
 <!--									<ul class="actions special">-->
 <!--										<li><a href="#" class="button">Full Story</a></li>-->
 <!--									</ul>-->
-								</article>
+					</article>
 
-								<article>
-									<header>
-										<h2><a href="https://github.com/karimx17/Space_Exploration" target="_blank">Advanced<br />
-										Data Science 2</a></h2>
-									</header>
-									<a href="https://github.com/karimx17/Space_Exploration" class="image fit" target="_blank"><img src="static/images/space.jpeg" alt="" /></a>
-									<p>An in depth analysis of Space Exploration from the 1960s to the present. Using tools such as Plotly, Matplotlib, Pandas, and Numpy to explore, clean, and visualize the space race.</p>
+					<article>
+						<header>
+							<h2><a href="https://github.com/karimx17/Space_Exploration" target="_blank">Data Science<br />
+							Space Race</a></h2>
+						</header>
+						<a href="https://github.com/karimx17/Space_Exploration" class="image fit" target="_blank"><img src="static/images/space.jpeg" alt="" width="300" height="300"/></a>
+						<p>An in depth analysis of Space Exploration from the 1960s to the present. Using tools such as Plotly, Matplotlib, Pandas, and Numpy to explore, clean, and visualize the space race.</p>
 <!--									<ul class="actions special">-->
 <!--										<li><a href="#" class="button">Full Story</a></li>-->
 <!--									</ul>-->
-								</article>
+					</article>
 
-								<article>
-									<header>
-										<h2><a href="https://github.com/karimx17/Canada_Alberta_CPI_GDP", target="_blank">Intermediate<br />
-										Data Science</a></h2>
-									</header>
-									<a href="https://github.com/karimx17/Canada_Alberta_CPI_GDP" class="image fit" target="_blank"><img src="static/images/alberta.jpeg" alt="" /></a>
-									<p>Here I use modules such as Matplotlib, Plotly, and Pandas to analyze data provided by the <a href="https://open.alberta.ca/dataset?res_format=CSV&topic=Economy+and+Finance&topic=Business+and+Industry", target="_blank">Alberta Government</a> on current and historical Consumer Price Index as well as real GDP of Canada and Alberta.</p>
+					<article>
+						<header>
+							<h2><a href="https://github.com/karimx17/Canada_Alberta_CPI_GDP", target="_blank">Data Science<br />
+							Canada Stats</a></h2>
+						</header>
+						<a href="https://github.com/karimx17/Canada_Alberta_CPI_GDP" class="image fit" target="_blank"><img src="static/images/alberta.jpeg" alt="" width="300" height="300"/></a>
+						<p>Here I use modules such as Matplotlib, Plotly, and Pandas to analyze data provided by the <a href="https://open.alberta.ca/dataset?res_format=CSV&topic=Economy+and+Finance&topic=Business+and+Industry", target="_blank">Alberta Government</a> on current and historical Consumer Price Index as well as real GDP of Canada and Alberta.</p>
 <!--									<ul class="actions special">-->
 <!--										<li><a href="#" class="button">Full Story</a></li>-->
 <!--									</ul>-->
-								</article>
+					</article>
 
 
 
-								<article>
-									<header>
-										<h2><a href="https://github.com/karimx17/Morse-Code/blob/master/main.py" target="_blank">Beginner<br />
-										Morse Code</a></h2>
-									</header>
-									<a href="https://github.com/karimx17/Morse-Code/blob/master/main.py" class="image fit" target="_blank"><img src="static/images/morse_code.jpeg" alt="" /></a>
-									<p>Showcasing my ability to translate a users input into morse code, by using functions, for-loops, dictionaries, f-strings, and addition assignments.  </p>
+					<article>
+						<header>
+							<h2><a href="https://github.com/karimx17/Breakout_Game" target="_blank">Game<br />
+							 Breakout</a></h2>
+						</header>
+						<a href="https://github.com/karimx17/Breakout_Game" class="image fit" target="_blank"><img src="static/images/breakout.jpeg" alt="" width="300" height="300"/></a>
+						<p>My capabilities of Object-Oriented Programming are shown by creating the classic Breakout game with Python and the module Tkinter. </p>
 <!--									<ul class="actions special">-->
 <!--										<li><a href="https://github.com/karimx17/Morse-Code/blob/master/main.py" class="button" target="_blank">Full Story</a></li>-->
 <!--									</ul>-->
-								</article>
+					</article>
 
-							</section>
+				</section>
 
-						<!-- Footer -->
+				<!-- Footer -->
 <!--							<footer>-->
 <!--								<div class="pagination">-->
 <!--									&lt;!&ndash;<a href="#" class="previous">Prev</a>&ndash;&gt;-->
@@ -158,45 +158,45 @@
 <!--								</div>-->
 <!--							</footer>-->
 
-					</div>
+			</div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
+			<!-- Footer -->
+				<footer id="footer">
+					<section>
+						<form method="post" action="#">
+							<div class="fields">
+								<div class="field">
+									<label for="name">Name</label>
+									<input type="text" name="name" id="name" />
 								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
+								<div class="field">
+									<label for="email">Email</label>
+									<input type="text" name="email" id="email" />
+								</div>
+								<div class="field">
+									<label for="message">Message</label>
+									<textarea name="message" id="message" rows="3"></textarea>
+								</div>
+							</div>
+							<ul class="actions">
+								<li><input type="submit" value="Send Message" /></li>
+							</ul>
+						</form>
+					</section>
+					<section class="split contact">
+						<section class="alt">
+							<h3>Address</h3>
+							<p>217 Kincora Heights NW<br />
+							Calgary, AB</p>
 						</section>
-						<section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>217 Kincora Heights NW<br />
-								Calgary, AB</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(403) 561-1373</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="#">karim.khatib@edu.sait.ca</a></p>
-							</section>
+						<section>
+							<h3>Phone</h3>
+							<p><a href="#">(403) 561-1373</a></p>
+						</section>
+						<section>
+							<h3>Email</h3>
+							<p><a href="#">karim.khatib@edu.sait.ca</a></p>
+						</section>
 <!--							<section>-->
 <!--								<h3>Social</h3>-->
 <!--								<ul class="icons alt">-->
@@ -206,15 +206,15 @@
 <!--									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>-->
 <!--								</ul>-->
 <!--							</section>-->
-						</section>
-					</footer>
+					</section>
+				</footer>
 
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Karim Khatib Portfolio</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
+			<!-- Copyright -->
+				<div id="copyright">
+					<ul><li>&copy; Karim Khatib Portfolio</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+				</div>
 
-			</div>
+		</div>
 
 		<!-- Scripts -->
 			<script src="/static/assets/js/jquery.min.js"></script>
