Fix a misspelled word

--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,7 @@
 							U.S. Stats</a></h2>
 						</header>
 						<a href="https://github.com/karimx17/Police_Killings/blob/master/main.py" class="image fit" target="_blank"><img src="static/images/gov.jpeg" alt="" width="300" height="300"/></a>
-						<p>I use my skills in Python to analyze the data to give you a perspective of the inverse relationship between High School Graduations and Poverty Levels. Followed by Police Killings and if race is a factor. All numbers are form The United States of America.</p>
+						<p>I use my skills in Python to analyze the data to give you a perspective of the inverse relationship between High School Graduations and Poverty Levels. Followed by Police Killings and if race is a factor. All numbers are from The United States of America.</p>
 <!--									<ul class="actions special">-->
 <!--										<li><a href="#" class="button">Full Story</a></li>-->
 <!--									</ul>-->
