Form works. Phone link works. Email link works.

--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,7 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<section>
-						<form method="post" action="#">
+						<form method="POST" action="https://formspree.io/f/xleznbjp" onsubmit="this.submit(); this.reset(); return false;" >
 							<div class="fields">
 								<div class="field">
 									<label for="name">Name</label>
@@ -128,7 +128,7 @@
 								</div>
 							</div>
 							<ul class="actions">
-								<li><input type="submit" value="Send Message" /></li>
+								<li><input type="submit" value="Send" /></li>
 							</ul>
 						</form>
 					</section>
@@ -140,11 +140,11 @@
 						</section>
 						<section>
 							<h3>Phone</h3>
-							<p><a href="#">(403) 561-1373</a></p>
+							<p><a href="tel:4035611373">(403) 561-1373</a></p>
 						</section>
 						<section>
 							<h3>Email</h3>
-							<p><a href="#">karim.khatib@edu.sait.ca</a></p>
+							<p><a href="mailto:karim.khatib@edu.sait.ca">karim.khatib@edu.sait.ca</a></p>
 						</section>
 					</section>
 				</footer>
